2009-08-10  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update with new files.

	* LINGUAS:
	* eo.po:
	Add Esperanto translation.

2009-07-31  kitone  <kitone@gna.org>

	* fr.po:
	Fix typo.

2009-07-14  kitone  <kitone@gna.org>

	* subtitleeditor.pot:
	Update with the last change (findandreplace).

2009-06-23  kitone  <kitone@gna.org>

	* fr.po:
	Update.

2009-06-23  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with new files.

	* Makefile.in.in:
	* subtitleeditor.pot:
	Update.

2009-06-14  kitone  <kitone@gna.org>

	* fr.po:
	Fix small typo.

2009-06-01  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update.

2009-04-22  kitone  <kitone@gna.org>

	* subtitleeditor.pot:
	Update.

2009-04-10  kitone  <kitone@gna.org>

	* subtitleeditor.pot:
	Update.

2009-04-10  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with new files.

2008-11-30  kitone  <kitone@gna.org>

	* pl.po:
	Fix typo. (bug #12658, patch by Fryderyk Dziarmagowski)

2008-11-27  kitone  <kitone@gna.org>

	* pl.po:
	* zh_CN.po:
	Update.

2008-11-25  kitone  <kitone@gna.org>

	* fr.po:
	Update.

2008-11-24  kitone  <kitone@gna.org>

	* cs.po:
	* fr.po:
	* subtitleeditor.pot:
	Update translations.

2008-11-24  kitone  <kitone@gna.org>

	* subtitleeditor.pot:
	Update.

2008-11-16  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update.

2008-11-15  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update with new files.

	* cs.po:
	Update by Luboš Staněk.

2008-11-13  kitone  <kitone@gna.org>

	* POTFILES.in:
	Add [type: gettext/ini] before the se-plugin name.

	* subtitleeditor.pot:
	Update with the last files (include se-plugin.in)

2008-11-13  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with new filename. se-plugin.desktop.in to se-plugin.in

2008-11-12  kitone  <kitone@gna.org>

	* LINGUAS:
	New file.

	* POTFILES.in:
	Update with desktop.in files.

2008-11-10  kitone  <kitone@gna.org>

	* POTFILES.in: