@@ -3,17 +3,17 @@ plugins/actions/about/about.cc
 plugins/actions/adjusttime/adjusttime.cc
 plugins/actions/applytranslation/applytranslation.cc
 plugins/actions/changeframerate/changeframerate.cc
-plugins/actions/changeframerate/dialog-change-framerate.glade
+plugins/actions/changeframerate/dialog-change-framerate.ui
 plugins/actions/combinesubtitles/combinesubtitles.cc
 plugins/actions/command/command.cc
 plugins/actions/configurekeyboardshortcuts/configurekeyboardshortcuts.cc
-plugins/actions/configurekeyboardshortcuts/dialog-configure-keyboard-shortcuts.glade
+plugins/actions/configurekeyboardshortcuts/dialog-configure-keyboard-shortcuts.ui
 plugins/actions/dialoguize/dialoguize.cc
 plugins/actions/documentmanagement/documentmanagement.cc
 plugins/actions/duplicatesubtitle/duplicatesubtitle.cc
 plugins/actions/editcell/editcell.cc
-plugins/actions/errorchecking/dialog-error-checking.glade
-plugins/actions/errorchecking/dialog-error-checking-preferences.glade
+plugins/actions/errorchecking/dialog-error-checking-preferences.ui
+plugins/actions/errorchecking/dialog-error-checking.ui
 plugins/actions/errorchecking/errorchecking.h
 plugins/actions/errorchecking/errorcheckingplugin.cc
 plugins/actions/errorchecking/errorcheckingpreferences.h
@@ -25,9 +25,9 @@ plugins/actions/errorchecking/overlapping.h
 plugins/actions/errorchecking/toolongdisplaytime.h
 plugins/actions/errorchecking/tooshortdisplaytime.h
 plugins/actions/extendlength/extendlength.cc
-plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.glade
+plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.ui
 plugins/actions/externalvideoplayer/externalvideoplayer.cc
-plugins/actions/findandreplace/dialog-find-and-replace.glade
+plugins/actions/findandreplace/dialog-find-and-replace.ui
 plugins/actions/findandreplace/findandreplace.cc
 plugins/actions/insertsubtitle/insertsubtitle.cc
 plugins/actions/italicize/italicize.cc
@@ -36,10 +36,10 @@ plugins/actions/keyframesmanagement/keyframesgenerator.cc
 plugins/actions/keyframesmanagement/keyframesmanagement.cc
 plugins/actions/keyframesmanagement/mediadecoder.h
 plugins/actions/moveafterprecedingsubtitle/moveafterprecedingsubtitle.cc
-plugins/actions/movesubtitles/dialog-move-subtitles.glade
+plugins/actions/movesubtitles/dialog-move-subtitles.ui
 plugins/actions/movesubtitles/movesubtitles.cc
 plugins/actions/plaintext/plaintext.cc
-plugins/actions/preferences/dialog-preferences.glade
+plugins/actions/preferences/dialog-preferences.ui
 plugins/actions/preferences/documentpage.h
 plugins/actions/preferences/extensionpage.h
 plugins/actions/preferences/interfacepage.h
@@ -50,18 +50,18 @@ plugins/actions/preferences/videoplayerpage.h
 plugins/actions/preferences/waveformpage.h
 plugins/actions/removesubtitle/removesubtitle.cc
 plugins/actions/reversetextandtranslation/reversetextandtranslation.cc
-plugins/actions/scalesubtitles/dialog-scale-subtitles.glade
+plugins/actions/scalesubtitles/dialog-scale-subtitles.ui
 plugins/actions/scalesubtitles/scalesubtitles.cc
 plugins/actions/selection/selection.cc
-plugins/actions/spellchecking/dialog-spell-checking.glade
+plugins/actions/spellchecking/dialog-spell-checking.ui
 plugins/actions/spellchecking/spellchecking.cc
-plugins/actions/splitdocument/dialog-split-document.glade
+plugins/actions/splitdocument/dialog-split-document.ui
 plugins/actions/splitdocument/splitdocument.cc
 plugins/actions/splitsubtitle/splitsubtitle.cc
-plugins/actions/styleeditor/dialog-style-editor.glade
+plugins/actions/styleeditor/dialog-style-editor.ui
 plugins/actions/styleeditor/styleeditor.cc
 plugins/actions/styleeditor/styleeditor.h
-plugins/actions/textcorrection/assistant-text-correction.glade
+plugins/actions/textcorrection/assistant-text-correction.ui
 plugins/actions/textcorrection/capitalizationpage.h
 plugins/actions/textcorrection/commonerrorpage.h
 plugins/actions/textcorrection/confirmationpage.h
@@ -77,7 +77,7 @@ plugins/actions/textcorrection/textcorrection.cc
 plugins/actions/timemodemanagement/timemodemanagement.cc
 plugins/actions/timingfromplayer/timingfromplayer.cc
 plugins/actions/videoplayermanagement/videoplayermanagement.cc
-plugins/actions/viewmanager/dialog-view-manager.glade
+plugins/actions/viewmanager/dialog-view-manager.ui
 plugins/actions/viewmanager/viewmanager.cc
 plugins/actions/wavefrommanagement/mediadecoder.h
 plugins/actions/wavefrommanagement/waveformgenerator.cc
@@ -87,7 +87,7 @@ plugins/subtitleformats/adobeencoredvd/adobeencoredvdntsc.cc
 plugins/subtitleformats/adobeencoredvd/adobeencoredvdpal.cc
 plugins/subtitleformats/advancedsubstationalpha/advancedsubstationalpha.cc
 plugins/subtitleformats/bitc/bitc.cc
-plugins/subtitleformats/bitc/dialog-bitc.glade
+plugins/subtitleformats/bitc/dialog-bitc.ui
 plugins/subtitleformats/microdvd/microdvd.cc
 plugins/subtitleformats/mpl2/mpl2.cc
 plugins/subtitleformats/mpsub/mpsub.cc
@@ -96,15 +96,15 @@ plugins/subtitleformats/substationalpha/substationalpha.cc
 plugins/subtitleformats/subtitleeditorproject/subtitleeditorproject.cc
 plugins/subtitleformats/subviewer2/subviewer2.cc
 plugins/subtitleformats/timedtextauthoringformat1/timedtextauthoringformat1.cc
-share/glade/dialog-character-codings.glade
-share/glade/dialog-encodings-chooser.glade
-share/glade/dialog-export-text.glade
-share/glade/dialog-import-text.glade
-share/glade/dialog-open-document.glade
-share/glade/dialog-save-document.glade
-share/glade/dialog-script-properties.glade
-share/glade/subtitleeditor.glade
 share/subtitleeditor.desktop.in
+share/ui/dialog-character-codings.ui
+share/ui/dialog-encodings-chooser.ui
+share/ui/dialog-export-text.ui
+share/ui/dialog-import-text.ui
+share/ui/dialog-open-document.ui
+share/ui/dialog-save-document.ui
+share/ui/dialog-script-properties.ui
+share/ui/subtitleeditor.ui
 src/cfg.cc
 src/cfg.h
 src/color.cc
