@@ -1,3 +1,8 @@
+2009-08-19  kitone  <kitone@gna.org>
+
+	* POTFILES.in:
+	Update with renamed files.
+
 2009-08-10  kitone  <kitone@gna.org>
 
 	* POTFILES.in:
